--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   docman: ^1.2.0
   visibility_detector: ^0.4.0+2
   widget_zoom: ^0.0.4
+  sqflite: ^2.4.2
+  confirm_dialog: ^1.0.4
 
 dev_dependencies:
   flutter_test:
