--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   flutter_riverpod: ^2.6.1
   docman: ^1.2.0
   visibility_detector: ^0.4.0+2
-  widget_zoom: ^0.0.4
+  #widget_zoom: ^0.0.4
   sqflite: ^2.4.2
   confirm_dialog: ^1.0.4
+  zoomable_widget: ^0.0.6
 
 dev_dependencies:
   flutter_test:
