Replace zoomable to a zoomList that has better support for list view item & fix the auto jmp next chapter issue due to library changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite: ^2.4.2
   confirm_dialog: ^1.0.4
   zoomable_widget: ^0.0.6
+  zoom_view: ^1.0.2
 
 dev_dependencies:
   flutter_test:
